--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
           </div>
         </div>
         <div class="whatsapp-icon">
-          <a href="https://api.whatsapp.com/send?phone=5511977899166&text=Olá, eu gostaria de saber mais sobre os serviços de automação!🤖" target="_blank">
-            <img src="imagens/whatsapp.gif" alt="WhatsApp">
+          <a href="https://api.whatsapp.com/send?phone=31993131001&text=Olá. Estou entrando em contato para conhecer a ATS INDEKS. Como essa plataforma pode melhorar meu processo de recrutamento e seleção?" target="_blank">
+              <img src="imagens/whatsapp.gif" alt="WhatsApp">
           </a>
         </div>
       </div>
