--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="background3">
       <div class="container2">
-        <img class="heading-2" src="imagens/heading-20.svg" />
+        <img class="heading-2" src="imagens/heading-20.jpg" />
         <div class="background-shadow"></div>
         <img class="computer-02-gif" src="imagens/computer-02-gif0.png" />
         <div class="heading-62">
@@ -68,7 +68,7 @@
           Com uma interface descomplicada, você poderá gerenciar cada etapa<br />do processo de contratação de forma simples e eficiente. Nada de<br />perder tempo e dinheiro com tarefas burocráticas e complexas.
         </div>
         <div class="div">.</div>
-        <img class="heading-22" src="imagens/heading-21.svg" />
+        <img class="heading-22" src="imagens/heading-21.jpg" />
       </div>
     </div>
     <div class="background4">
@@ -82,7 +82,7 @@
           Os benefícios do Recrutamento Inteligente INDEKS<br />vão desde a otimização do processo de contratação<br />a redução do turnover. Você contratará com<br />agilidade, reduzindo o tempo gasto na busca e<br />seleção de candidatos e aumentará a precisão na<br />escolha do contratado, evitando contratações<br />equivocadas que podem custar caro no futuro.
         </div>
         <div class="horizontal-divider"></div>
-        <img class="heading-24" src="imagens/heading-23.svg" />
+        <img class="heading-24" src="imagens/heading-23.jpg" />
         <div class="heading-63">
           <div class="redu-o-do-custo-de">Redução do Custo de</div>
           <div class="contrata-o">Contratação</div>
@@ -90,20 +90,20 @@
         <div class="o-custo-financeiro-de-um-processo-de-contrata-o-no-brasil-pode-chegar-a-10-mil-reais-por-vaga-aumente-a-produtividade-dos-seus-colaboradores-sendo-mais-assertivo-nas-contrata-es-e-inovando-a-forma-como-o-rh-lida-com-o-processo-de-contrata-o">
           O custo financeiro de um processo<br />de contratação no Brasil, pode<br />chegar a 10 mil reais por vaga.<br />Aumente a produtividade dos seus<br />colaboradores, sendo mais<br />assertivo nas contratações e<br />inovando a forma como o RH lida<br />com o processo de contratação.
         </div>
-        <img class="heading-25" src="imagens/heading-24.svg" />
-        <img class="heading-26" src="imagens/heading-25.svg" />
+        <img class="heading-25" src="imagens/heading-24.jpg" />
+        <img class="heading-26" src="imagens/heading-25.jpg" />
         <div class="heading-6-engajamento-imediato">Engajamento Imediato</div>
         <div class="com-a-indeks-poss-vel-determinar-o-perfil-comportamental-exato-conforme-a-necessidade-da-empresa-relacionada-ao-momento-da-equipe-e-exig-ncias-do-cargo">
           Com a INDEKS é possível<br />determinar o perfil<br />comportamental exato,<br />conforme a necessidade da<br />empresa, relacionada ao<br />momento da equipe e<br />exigências do cargo.
         </div>
-        <img class="heading-27" src="imagens/heading-26.svg" />
-        <img class="heading-28" src="imagens/heading-27.svg" />
+        <img class="heading-27" src="imagens/heading-26.jpg" />
+        <img class="heading-28" src="imagens/heading-27.jpg" />
         <div class="heading-6-preven-o-de-turnover">Prevenção de Turnover</div>
         <div class="se-contratar-caro-demitir-bem-mais-caro-e-os-custos-disso-n-o-s-o-apenas-financeiros-porque-o-processo-de-contrata-o-vai-reiniciar-e-impactar-a-produ-o-com-a-baixa-na-equipe">
           Se contratar é caro, demitir é<br />bem mais caro e os custos<br />disso não são apenas<br />financeiros, porque o processo<br />de contratação vai reiniciar e<br />impactar a produção com a<br />baixa na equipe.
         </div>
-        <img class="heading-29" src="imagens/heading-28.svg" />
-        <img class="heading-210" src="imagens/heading-29.svg" />
+        <img class="heading-29" src="imagens/heading-28.jpg" />
+        <img class="heading-210" src="imagens/heading-29.jpg" />
         <div class="heading-64">
           <div class="contrata-o-r-pida-e">Contratação Rápida e</div>
           <div class="assertiva">Assertiva</div>
@@ -111,20 +111,20 @@
         <div class="empresas-levam-em-m-dia-42-dias-para-preencher-uma-vaga-com-nossa-pr-sele-o-automatizada-poss-vel-reduzir-os-dias-e-o-rh-n-o-perde-tempo-entrevistando-candidatos-desqualificados">
           Empresas levam em média 42<br />dias para preencher uma vaga,<br />com nossa pré-seleção<br />automatizada, é possível<br />reduzir os dias e o RH não<br />perde tempo entrevistando<br />candidatos desqualificados.
         </div>
-        <img class="heading-211" src="imagens/heading-210.svg" />
+        <img class="heading-211" src="imagens/heading-210.jpg" />
         <div class="iframe">
           <div class="body">
             <div class="you-tube-video-player">
               <iframe class="image" src="https://www.youtube.com/embed/uXx0cJmclck" title="Indeks - ATS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="button-menu-share">
-              <img class="svg2" src="imagens/svg1.svg" />
+              <img class="jpg2" src="imagens/jpg1.jpg" />
               <div class="container4">
                 <div class="share">Share</div>
               </div>
             </div>
             <div class="button-menu-playlist">
-              <img class="svg3" src="imagens/svg2.svg" />
+              <img class="jpg3" src="imagens/jpg2.jpg" />
               <div class="_1-1">1/1</div>
             </div>
             <div class="container5">
@@ -137,7 +137,7 @@
     </div>
     <div class="background5">
       <div class="container2">
-        <img class="heading-212" src="imagens/heading-211.svg" />
+        <img class="heading-212" src="imagens/heading-211.jpg" />
         <div class="heading-213">
           <div class="intelig-ncia-artificial">Inteligência Artificial</div>
           <div class="precisa">Precisa.</div>
@@ -171,7 +171,7 @@
         <div class="quando-a-pessoa-certa-est-no-cargo-certo-as-equipes-engajam-mais-r-pido-o-processo-de-adapta-o-curto-e-suave-fazendo-a-empresa-acelerar-a-sua-curva-de-crescimento">
           Quando a pessoa certa está no<br />cargo certo, as equipes<br />engajam mais rápido, o<br />processo de adaptação é curto<br />e suave, fazendo a empresa<br />acelerar a sua curva de<br />crescimento.
         </div>
-        <img class="heading-214" src="imagens/heading-213.svg" />
+        <img class="heading-214" src="imagens/heading-213.jpg" />
       </div>
     </div>
     <div class="background10">
@@ -236,22 +236,22 @@
           Não adiantar ter o melhor técnico com o pior temperamento. Além da<br />competência técnica, as empresas precisam de pessoas com o temperamento adequado, para<br />cada cargo e função. Essas pessoas precisam ser flexíveis e saber conviver com diferenças.
         </div>
         <div class="heading-2-por-isso-que-o-rpa-analisa-graficamente">É por isso que o RPA analisa graficamente:</div>
-        <img class="icon" src="imagens/icon0.svg" />
+        <img class="icon" src="imagens/icon0.jpg" />
         <div class="perfil-comportamental">Perfil comportamental</div>
-        <img class="icon2" src="imagens/icon1.svg" />
+        <img class="icon2" src="imagens/icon1.jpg" />
         <div class="percep-o-do-ambiente-atual">Percepção do ambiente atual</div>
-        <img class="icon3" src="imagens/icon2.svg" />
+        <img class="icon3" src="imagens/icon2.jpg" />
         <div class="padr-o-comportamental-atual">Padrão comportamental atual</div>
-        <img class="icon5" src="imagens/icon4.svg" />
+        <img class="icon5" src="imagens/icon4.jpg" />
         <div class="fontes-de-estresse">Fontes de estresse</div>
-        <img class="icon4" src="imagens/icon3.svg" />
+        <img class="icon4" src="imagens/icon3.jpg" />
         <div class="n-vel-de-energia">Nível de energia</div>
         <img class="image-background" src="imagens/image-background0.png" />
       </div>
     </div>
     <div class="background14">
       <div class="container2">
-        <img class="heading-218" src="imagens/heading-217.svg" />
+        <img class="heading-218" src="imagens/heading-217.jpg" />
         <div class="heading-2-mas-o-que-s-o-rpa-e-rpr">Mas... o que são RPA e RPR?</div>
         <div class="background-shadow7"></div>
         <img class="_11999927-png" src="imagens/_11999927-png0.png" />
@@ -285,7 +285,7 @@
             <span class="strong-rpa-span2">que permite descrever o padrão<br />comportamental desejado para o cargo,<br />inclusive de forma gráfica. Essa ferramenta<br />vai determinar qual o perfil mais adequado<br />para o cargo a ser ocupado.</span>
           </span>
         </div>
-        <img class="heading-219" src="imagens/heading-218.svg" />
+        <img class="heading-219" src="imagens/heading-218.jpg" />
       </div>
     </div>
     <div class="background15">
