--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
     <div class="background5">
       <div class="container2">
-        <img class="heading-212" src="imagens/heading-211.svg" />
+        <img class="heading-212" src="imagens/heading-211.jpg" />
         <div class="heading-213">
           <div class="intelig-ncia-artificial">Inteligência Artificial</div>
           <div class="precisa">Precisa.</div>
