--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           Com a ordenação dos candidatos feita pelo RPA<br />da INDEKS, você vai encontrar rapidamente os<br />candidatos de maior afinidade com as vagas de<br />acordo com os seus critérios de seleção.
         </div>
         <div class="background6"></div>
-        <img class="_11983249-png" src="imagens/_11983249.jpg" />
+        <img class="_11983249-png" src="imagens/_11983249-png0.jpg" />
         <div class="heading-6-cargo-ou-func-o">Cargo ou Função</div>
         <div class="defina-a-vaga-de-acordo-com-as-exig-ncias-do-cargo-a-ser-preenchido-e-a-necessidade-espec-fica-do-momento-em-que-a-empresa-est">
           Defina a vaga de acordo com<br />as exigências do cargo a ser<br />preenchido e a necessidade<br />específica do momento em que<br />a empresa está. 
